--- a/demo/jquery.pageswipe.htm
+++ b/demo/jquery.pageswipe.htm
@@ -4,7 +4,8 @@
     <title>Swipe</title>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <link rel="stylesheet" href="swipe.css" type="text/css" />
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.js"></script>
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.js"></script>
+    <script type="text/javascript" src="../src/ios6fix.js"></script>
     <script type="text/javascript" src="../dist/jquery.pageswipe.min.js"></script>
     <script>
         $(document).ready(function() {
